シーンクラスの追加
タイトルシーンと各作業用のデバックシーンの追加

--- a/STG/STG.vcxproj
+++ b/STG/STG.vcxproj
@@ -135,11 +135,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="GameManager.cpp" />
-    <ClCompile Include="MainLoop.cpp" />
+    <ClCompile Include="Source\Main\GameManager.cpp" />
+    <ClCompile Include="Source\Main\MainLoop.cpp" />
+    <ClCompile Include="Source\Scene\Awata.cpp" />
+    <ClCompile Include="Source\Scene\SceneBase.cpp" />
+    <ClCompile Include="Source\Scene\Tamura.cpp" />
+    <ClCompile Include="Source\Scene\TitleScene.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GameManager.h" />
+    <ClInclude Include="Source\Main\GameManager.h" />
+    <ClInclude Include="Source\Scene\Awata.h" />
+    <ClInclude Include="Source\Scene\SceneBase.h" />
+    <ClInclude Include="Source\Scene\Tamura.h" />
+    <ClInclude Include="Source\Scene\TitleScene.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
