的オブジェクト関係のクラスを追加
的オブジェクトクラス(Target)とその管理クラス(TargetManager)、
三次元ベクトルと二次元ベクトルのクラスを追加
Target
・移動処理
・描画処理(現状はSphere)
TargetManager
・TargetList(TargetClass配列)
・管理しているTargetの更新/描画処理
を追加

--- a/STG/STG.vcxproj
+++ b/STG/STG.vcxproj
@@ -137,17 +137,25 @@
   <ItemGroup>
     <ClCompile Include="Source\Main\GameManager.cpp" />
     <ClCompile Include="Source\Main\MainLoop.cpp" />
+    <ClCompile Include="Source\Math\Vector2.cpp" />
+    <ClCompile Include="Source\Math\Vector3.cpp" />
     <ClCompile Include="Source\Scene\Awata.cpp" />
     <ClCompile Include="Source\Scene\SceneBase.cpp" />
     <ClCompile Include="Source\Scene\Tamura.cpp" />
     <ClCompile Include="Source\Scene\TitleScene.cpp" />
+    <ClCompile Include="Source\Target\Target.cpp" />
+    <ClCompile Include="Source\Target\TargetManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Main\GameManager.h" />
+    <ClInclude Include="Source\Math\Vector2.h" />
+    <ClInclude Include="Source\Math\Vector3.h" />
     <ClInclude Include="Source\Scene\Awata.h" />
     <ClInclude Include="Source\Scene\SceneBase.h" />
     <ClInclude Include="Source\Scene\Tamura.h" />
     <ClInclude Include="Source\Scene\TitleScene.h" />
+    <ClInclude Include="Source\Target\Target.h" />
+    <ClInclude Include="Source\Target\TargetManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
